--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ anova(modelOnAM, model, modelALL)
 
 <h2>Appendix of Figures</h2>
 
-<p><img src="figure/Rplot1.jpeg" alt="plot of chunk figures"> <img src="figure/figures2.png" alt="plot of chunk figures"> <img src="figure/figures3.png" alt="plot of chunk figures"> <img src="figure/figures4.png" alt="plot of chunk figures"> <img src="figure/figures5.png" alt="plot of chunk figures"> </p>
+<p><img src="figure/Rplot1.jpeg" alt="plot of chunk figures"> <img src="figure/Rplot2.jpeg" alt="plot of chunk figures"> <img src="figure/Rplot3.jpeg" alt="plot of chunk figures"> <img src="figure/Rplot4.jpeg" alt="plot of chunk figures"> <img src="figure/Rplot5.jpeg" alt="plot of chunk figures"> </p>
 
 </body>
 
